style: fixed spacing and styling

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,8 +11,6 @@
 
 .App-header {
   background-color: #222;
-  height: 120;
-  padding: 20px;
   color: white;
 }
 
